# bspshark

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  populate_knowledge.sh  populate_wiki.sh
backend/: CLAUDE.md  Cargo.toml
backend/migrations/: 001_initial_schema.up.sql  002_knowledge_system.up.sql  003_knowledge_instances.up.sql  004_remove_node_type_rename_experience.down.sql  004_remove_node_type_rename_experience.up.sql  005_wiki_pages.down.sql  005_wiki_pages.up.sql  005_wiki_system.up.sql  006_wiki_self_reference_check.down.sql  006_wiki_self_reference_check.up.sql  007_knowledge_items.down.sql  007_knowledge_items.up.sql  008_sections_always_enabled.down.sql  008_sections_always_enabled.up.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs
backend/src/handlers/: experience.rs  knowledge_instance.rs  knowledge_item.rs  knowledge_tree.rs  mod.rs  pitfall.rs  task.rs  tree_node.rs  upload.rs  wiki.rs  wiki_page.rs
backend/src/models/: experience.rs  knowledge_instance.rs  knowledge_item.rs  knowledge_relation.rs  knowledge_tree.rs  mod.rs  pitfall.rs  task.rs  wiki.rs  wiki_page.rs  wiki_page_section.rs
backend/src/services/: CLAUDE.md  auto_identify.rs  experience.rs  knowledge.rs  mod.rs  versioning.rs  wiki_compose.rs
backend/tests/: experience_test.rs  health_test.rs  knowledge_item_test.rs  knowledge_test.rs  pitfall_test.rs  task_test.rs  wiki_test.rs
backend/tests/common/: mod.rs
deploy/: .env.production  Dockerfile.opensuse  Dockerfile.release  start-docker.sh  (+4 more)
(+111 files in other folders)
